RESOLVED FIXED 245753
the MediaSessionInfo for a media element doesn't get updates when a srcObject is used
https://bugs.webkit.org/show_bug.cgi?id=245753
Summary the MediaSessionInfo for a media element doesn't get updates when a srcObject...
Cameron McCormack (:heycam)
Reported 2022-09-27 14:47:41 PDT
In bug 243062, we added an optimisation to avoid the expensive computation of an updated MediaSessionInfo object when the previous state had no currentSrc URL and the current state doesn't either. But this excludes media elements that have a srcObject, whose state we still want to reflect through media sessions.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-27 14:48:12 PDT
Cameron McCormack (:heycam)
Comment 2 2022-09-27 15:12:24 PDT
EWS
Comment 3 2022-09-28 02:06:36 PDT
Committed 254948@main (6cfe0a4e9efc): <https://commits.webkit.org/254948@main> Reviewed commits have been landed. Closing PR #4773 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.