Cherry-pick 6cfe0a4e9efc. rdar://problem/100477469

Update MediaSessionInfo media elements with a srcObject
    https://bugs.webkit.org/show_bug.cgi?id=245753
    rdar://problem/100477469

    Reviewed by Jer Noble.

    The optimization at the top of MediaElementSession::updateMediaUsageIfChanged
    does not take into account media elements that have no currentSrc but do
    have a srcObject. Don't exit early for such elements.

    Store an additional bit of information on MediaSessionInfo to represent whether
    the element has any source (currentSrc or srcObject).

    * Source/WebCore/html/HTMLMediaElement.h:
    (WebCore::HTMLMediaElement::hasSource const):
    * Source/WebCore/html/MediaElementSession.cpp:
    (WebCore::MediaElementSession::updateMediaUsageIfChanged):
    * Source/WebCore/platform/graphics/MediaUsageInfo.h:
    (WebCore::MediaUsageInfo::operator== const):
    (WebCore::MediaUsageInfo::encode const):
    (WebCore::MediaUsageInfo::decode):

    Canonical link: https://commits.webkit.org/254948@main

Canonical link: https://commits.webkit.org/252432.616@safari-7614-branch